<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/heightCardView"
    cardview:cardCornerRadius="@dimen/cardViewcornerRadius"
    cardview:cardBackgroundColor="@android:color/white"
    cardview:cardElevation="6.5dp"
    android:layout_marginBottom="5dp"
    >
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/pictureCardImg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightCardView"
        android:background="@drawable/cbl_red_bricks_9x12_200_dpi"
        android:scaleType="centerCrop"
        android:transitionName="@string/transitionname_picture"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/backgroundTextCard">
        <TextView
            android:id="@+id/tvUserNameCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usernameCard"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textZiseUsernameCardView"
            />
        <LinearLayout
            android:id="@+id/firstWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/etFirstWordCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstWordCard"
                android:textColor="@android:color/white"
                android:textSize="@dimen/firstWordTextSize"
              />
            <TextView
                android:id="@+id/tvTimeCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timecard"
                android:textColor="@android:color/white"
                android:textSize="@dimen/firstWordTextSize"
                android:layout_marginLeft="@dimen/timeCardMarginLeft"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/likeCardMarginTop">
            <CheckBox
                android:id="@+id/chkLikeCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkboxselector"
                />
            <TextView
                android:id="@+id/tvLikeNumberCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/firstWordTextSize"
                android:text="@string/tvLikeNumberCard"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
</android.support.v7.widget.CardView>