<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rubik.platzigram.ReferenciaActivity">

    <include layout="@layout/actionbar_toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintEmail"
                    android:inputType="textEmailAddress">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintName"
                    android:layout_marginTop="@dimen/textInputCreateAccountMargin">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etUserNameCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/HintUserName"
                    android:layout_marginTop="@dimen/textInputCreateAccountMargin"
                    >

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPasswordCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/HintPassword"
                    android:layout_marginTop="@dimen/textInputCreateAccountMargin"
                    android:inputType="textPassword"
                    >

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPasswordConfirmCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/HintPasswordConfirm"
                    android:layout_marginTop="@dimen/textInputCreateAccountMargin"
                    android:inputType="textPassword"
                    >

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btnJoinUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnJoinUs"
                android:theme="@style/RaisedButtonDark" />

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
