<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.rubik.platzigram.ReferenciaActivity">

    <android.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <android.widget.RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <android.widget.ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/platzigram"></android.widget.ImageView>
        </android.widget.RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true"
            android:padding="@dimen/controlBoxLoginPadding">


            <android.widget.LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/HintUserName"></android.support.design.widget.TextInputEditText>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/HintPassword"
                        android:inputType="textPassword">

                    </android.support.design.widget.TextInputEditText>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnLoginText"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="goContainer"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/tvHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/dontHaveAccountSize"
                        android:textStyle="bold"
                        android:text="@string/dontHaveAccount"/>
                    <TextView
                        android:id="@+id/tvCreateAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/dontHaveAccountSize"
                        android:textStyle="bold"
                        android:text="@string/createAccountTv"
                        android:layout_toRightOf="@id/tvHaveAccount"
                        />
                    <ProgressBar
                        android:id="@+id/progressBarLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"/>
                    
                </RelativeLayout>
            </android.widget.LinearLayout>
        </ScrollView>

    </android.widget.LinearLayout>


</android.support.design.widget.CoordinatorLayout>