<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.rubik.platzigram.ReferenciaActivity">
    <!--APP BAR es el contenedor de todos los elementos en el toolbar-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbarlayout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!--CollapsingToolbarLayout "Todo lo que queremos que se muestre al colapsar"-->
        <!--app:layout_scrollFlags="scroll|exitUntilCollapsed" "Permite que todos los elementos hijos tengan efecto de scroll"-->
        <!--app:contentScrim="@color/colorPrimary" permite cambiar de color al collapsar el toolbar-->
        <!--Efecto paralax a la imagen app:layout_collapseMode="parallax"-->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cbl_red_bricks_9x12_200_dpi"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:transitionName="@string/transitionname_picture"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>
    <!--Fin de la parte collapsiva-->
    
<!--Contenido fijo-->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            >
            
            <TextView
                android:id="@+id/tvUserNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_usernamedetail"
                android:text="@string/usernameCard"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_vertical_margin"/>
        
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                >
                <TextView
                    android:id="@+id/tvLikeNumberDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_LikeNumberDetail"
                    android:text="10"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"/>
                <TextView
                    android:id="@+id/tvSecondWordDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_LikeNumberDetail"
                    android:text="@string/likeDetail"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/marginLeftSecondWord"/>

            </LinearLayout>

            <!--Divider-->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightDivider"
                android:background="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/tvTitleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_LikeNumberDetail"
                android:text="@string/titleImageDetail"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/paddingtop_titleimagedetail"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvTextContentImageDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_LikeNumberDetail"
                android:text="@string/lorem"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/paddingtop_titleimagedetail"
                android:paddingLeft="@dimen/paddinghorizontal_textcontentdetail"
                android:paddingRight="@dimen/paddinghorizontal_textcontentdetail"
                />
        
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <!--app:layout_anchor="@id/appBar" para decir que cuelgue de appbarLayout-->
    <!--app:layout_anchorGravity="bottom|end" es como gravity pero tomando basado en su anchor-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/icons8_heart_50"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end"
        />
</android.support.design.widget.CoordinatorLayout>